[gd_scene load_steps=3 format=2]

[ext_resource path="res://ClickableObject/ClickableObject.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.32258, 1.46114 )

[node name="Area2D" type="Area2D"]
position = Vector2( 830, 263 )
scale = Vector2( 7.75, 32.1667 )
script = ExtResource( 2 )

[node name="Grass1" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.322578, 0.124352 )
scale = Vector2( 1, 0.999999 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_Area2D_mouse_entered"]
